--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -591,7 +591,7 @@
     <string-array name="conversation_addendum">
         <item>&lt;font color="{method:getDefaultColor}"&gt;&lt;b&gt;{string:subject; gender:⛌}&lt;/b&gt;&lt;/font&gt;</item>
         <item>&lt;i&gt;{string:interjections}&lt;/i&gt;</item>
-        <item>&lt;font color="{method:getDefaultColor}"&gt;&lt;b&gt;⸠[usuari[o,a]]⸡ de {method:getDeviceInfo}&lt;/b&gt;&lt;/font&gt;</item>
+        <item>&lt;font color="{method:getDefaultColor}"&gt;&lt;b&gt;{[usuari[o,a]]; gender:⛌} de {method:getDeviceInfo}&lt;/b&gt;&lt;/font&gt;</item>
     </string-array>
     <string-array name="date_options">
         <item>Consulta de hoy</item>
